# oss-docs

./: .binny.yaml  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  DEVELOPING.md  Makefile  README.md  Taskfile.yml  cspell.json  hugo.yaml  package-lock.json  package.json  playwright.config.js  pyproject.toml
.claude/agents/: accuracy-validator.md  doc-style-checker.md  doc-writer.md  ecosystem-capability-writer.md  snippet-generator.md  structure-guide.md  tech-writer.md
.claude/commands/: doc:add-snippet.md  doc:fact-check.md  doc:new.md  doc:refine.md  doc:style-check.md
.github/: dependabot.yml
.github/actions/bootstrap/: action.yaml
.github/workflows/: codeql.yaml  e2e-tests.yaml  update-generated-docs.yaml  update-reference-docs.yaml  update-tools.yaml  validate-github-actions.yaml  validations.yaml
assets/js/: clickable-alerts.js  mermaid-controls.js  pagefind-modal.js  table-wrappers.js  toc-scroll-spy.js  tooltips.js
assets/scss/: _capability_tables.scss  _navbar.scss  _page-actions.scss  _page-meta.scss  _schema_tables.scss  _search.scss  _sidebar.scss  _styles_project.scss  _typography.scss  _variables_project.scss  mermaid-controls.scss
assets/scss/components/: _alerts.scss  _buttons.scss  _code.scss  _tabs.scss
content/: _index.html
content/docs/: _index.md  glossary.md
data/: .gitignore  adopters.json
data/capabilities/: .gitignore  ecosystem.yaml  grype-operating-systems.json  syft-package-catalogers.json  vulnerability-data.yaml
data/sbom/: format-versions.json
data/syft/config/: output.txt
i18n/: en.toml
layouts/: baseof.html
layouts/_default/: search.html
layouts/_partials/: navbar.html
layouts/docs/: baseof.html
layouts/partials/: pagefind-modal.html  search-input.html  sidebar-tree.html
layouts/shortcodes/: accordion-item.html  accordion.html  adopters-list.html  alert.html  file-tabs.html  readfile.html
scripts/: README.md  generate-adopters-info.sh  generate-release-notes.sh  generate_capability_package_tables.py  generate_capability_vulnerability_tables.py  generate_format_examples.py  generate_format_versions.py  generate_jq_query_examples.py  generate_reference_cli_docs.py  generate_reference_config_docs.py  generate_reference_syft_json_schema.py  generate_template_examples.py  release-to-hugo.py  validate-hugo.sh
scripts/utils/: cache.py  cataloger.py  config.py  constants.py  data.py  docker.py  log.py  logging.py  markdown.py  output_manager.py  sbom.py  syft.py  version.py
src/: convert_links_to_relref.py  generate_capability_package_tables.py  generate_capability_vulnerability_tables.py  generate_data_source_tables.py  generate_format_examples.py  generate_format_versions.py  generate_jq_query_examples.py  generate_reference_cli_docs.py  generate_reference_config_docs.py  generate_reference_syft_json_schema.py  generate_supported_os_table.py  generate_template_examples.py
src/utils/: __init__.py  cache.py  config.py  constants.py  data.py  docker.py  git.py  html_table.py  markdown.py  syft.py
tasks.d/: generate.yaml  hugo.yaml  python.yaml
tests/: README.md  conftest.py  test_generate_reference_cli_docs.py
tests/e2e/: mermaid.spec.js  navigation.spec.js  responsive.spec.js  search.spec.js  theme.spec.js  toc-scroll-spy.spec.js
tests/unit/: conftest.py  test_convert_links.py  test_generate_reference_cli_docs.py  test_generate_reference_config_docs.py  test_schema_helpers.py
(+851 files in other folders)
