[project]
name = "oss-doc-scripts"
version = "0.1.0"
description = "Helper scripts for generating documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.5"]

[tool.setuptools]
packages = [] # no Python packages to install - this is a Hugo site with helper scripts

[tool.pytest.ini_options]
pythonpath = ["scripts"]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pyrefly>=0.29.0",
  "pytest>=8.4.1",
  "pytest-snapshot>=0.9.0",
  "pytest-sugar>=1.0.0",
  "ruff>=0.12.7",
  "ty>=0.0.1a18",
]

[tool.ruff]
line-length = 88
target-version = "py311"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ty]

[tool.pyrefly]
